--- a/Node/Clase19/esqueleto/package.json
+++ b/Node/Clase19/esqueleto/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jwt-simple": "^0.5.5",
+    "moment": "^2.24.0",
+    "rand-token": "^0.4.0",
     "typescript": "^3.3.3"
   },
   "devDependencies": {
